--- a/index.html
+++ b/index.html
@@ -71,18 +71,19 @@
             <div class="skills-box">
                 <i class='bx bxl-mongodb box-mongdoDB'></i>
                 <h3>MongoDB</h3>
-                <p>MongoDB is a NoSQL database that stores data in flexible, JSON-like documents. It offers high
-                    performance, scalability, and ease of use, making it ideal for modern applications and big data
-                    projects.
+                <p>MongoDB is a NoSQL database that stores data in flexible,
+                    JSON-like documents. It offers high performance, scalability,
+                    and ease of use, making it ideal for modern applications and
+                    big data projects.
                 </p>
                 <a href="" class="btn">Read more</a>
             </div>
             <div class="skills-box">
                 <i class='bx bxl-git box-git'></i>
                 <h3>Git</h3>
-                <p>Git is a distributed version control system that tracks changes in source code during software
-                    development. It allows multiple developers to collaborate on the same project, manage different
-                    versions of code, and merge changes efficiently.
+                <p>Git is a distributed version control system[9] that tracks
+                    versions of files. It is often used to control source code
+                    by programmers who are developing software collaboratively
                 </p>
                 <a href="" class="btn">Read more</a>
             </div>
@@ -91,25 +92,28 @@
             <div class="skills-box">
                 <i class='bx bxl-html5 box-html'></i>
                 <h3>HTML</h3>
-                <p>Hypertext Markup Language is the standard markup language for documents designed to be
-                    displayed in a web browser. It defines the content and structure of web content.
+                <p>Hypertext Markup Language is the standard markup language for
+                    documents designed to be displayed in a web browser. It
+                    defines the content and structure of web content.
                 </p>
                 <a href="" class="btn">Read more</a>
             </div>
             <div class="skills-box">
                 <i class='bx bxl-css3 box-css'></i>
                 <h3>CSS</h3>
-                <p>Cascading Style Sheets is a style sheet language used for specifying the presentation and
-                    styling of a document written in a markup language such as HTML or XML
+                <p>Cascading Style Sheets is a style sheet language used for
+                    specifying the presentation and styling of a document
+                    written in a markup language such as HTML or XML
                 </p>
                 <a href="" class="btn">Read more</a>
             </div>
             <div class="skills-box">
                 <i class='bx bxl-javascript box-js'></i>
                 <h3>JavaScrpit</h3>
-                <p>JavaScript is a programming language used to create interactive and dynamic features on websites. It
-                    enables user interaction, manipulates web content, handles asynchronous tasks, and can be used both
-                    on the client side and server side for building website
+                <p>JavaScript is a programming language for the web,
+                    used to create interactive and dynamic content on
+                    websites, such as handling events, changing the
+                    interface, and interacting with users.
                 </p>
                 <a href="" class="btn">Read more</a>
             </div>
