--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
-            <a href="#resume">Resume</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -122,7 +122,76 @@
 
         </div>
     </section>
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Lastes <span>Project</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="./assets/images/img2.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web design</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/images/img3.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web design</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/images/img4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web design</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/images/img4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web design</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="./assets/images/img4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web design</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
+                    <a href=""><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+        </div>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <h2 class="heading ">Contact <span>Me</span></h2>
+        <form action="">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder=" Email Subject">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="email" placeholder=" Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn" />
+            </div>
+        </form>
+    </section>
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Truong Cong Non - Frontented</p>
+        </div>
+    </footer>
 </body>
+<script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script src="main.js"></script>
 
