--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h2 class="heading">Lastes <span>Project</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="./assets/images/img2.png" alt="">
+                <img src="./assets/images/img1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web design</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="./assets/images/img3.png" alt="">
+                <img src="./assets/images/img10.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web design</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="./assets/images/img4.png" alt="">
+                <img src="./assets/images/img11.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web design</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="./assets/images/img4.png" alt="">
+                <img src="./assets/images/img12.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web design</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="./assets/images/img4.png" alt="">
+                <img src="./assets/images/img13.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Web design</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, libero?</p>
